--- a/BMI FTO - v1.0/BMI FTO walkthrough.Rmd
+++ b/BMI FTO - v1.0/BMI FTO walkthrough.Rmd
@@ -33,7 +33,7 @@ table(genotypes$rs8050136_A)
 ```
 Next, we read our billing code data from a csv file. We specify the data types of the columns as R will want to read ICD9CM codes as numeric values.
 ```{r}
-icd_codes=read_csv("id_codes.csv", col_types="ifci")
+icd_codes=read_csv("icd_codes.csv", col_types="ifci")
 ```
 Lastly, we will read our covariates in. These are saved in an RData file, which is a compressed, R specific file format.
 ```{r}
@@ -44,7 +44,7 @@ load("covariates.RData")
 Using the raw format data from plink means our genotype data will be ready to go. We are not going to transform our covariates either, so that leaves us to set up our phenotypes. The below call will use the default minimum code count of 2. This may take a few minutes to complete. Note that we are restricting some phenotypes that are specific to males or females, eg prostate cancer. We also define an aggregate function here, as we are using count data and not dates of occurrence (the preferred input).
 ```{r}
 phenotypes=createPhenotypes(icd_codes, 
-                            id.gender = covariates %>% transmute(id=FID, gender=ifelse(is.male,"M","F")),
+                            id.sex = covariates %>% transmute(id=FID, gender=ifelse(is.male,"M","F")),
                             aggregate.fun = sum)
 ```
 We can actually export this data to a phenotype file that would work with plink if interested. These can be quite large, so we are restricting to a single phenotype here
@@ -71,11 +71,11 @@ head(addPhecodeInfo(results) %>% arrange(p))
 Head gives the top n rows (6 by default), addPhecodeInfo adds the name of the phewas code to the data frame, and arrange orders the data frame according to p-value.
 We can report all associations from the PheWAS with p<1e-6 using the code below. There's also a handy method for creating an easy to use table in your knitted document! One can export the table with write.csv(), enabling it to be read by any spreadsheet software.
 ```{r}
-phewasDT(results)
+phewasDT(results %>% rename(phecode=phenotype))
 write.csv(addPhecodeInfo(results) %>% arrange(p) %>% filter(p<1e-6) %>% select(phecode, description, snp, OR, p, n_total, n_cases, n_controls), file="top-results.csv")
 ```
 
-Note that our top results are three phecodes that look very similar. As you may remember, phecodes are hierarchical. We shouldnt' be surprised to see the overlap in association here- the cases for each test are largely overlapped.
+Note that our top results are three phecodes that look very similar. As you may remember, phecodes are hierarchical. We shouldn't be surprised to see the overlap in association here- the cases for each test are largely overlapped.
 
 ##Plot the Results
 Creating a rough visualization is straight forward.
@@ -101,7 +101,7 @@ Note that changing the size and scale of the output plot can affect how it looks
 ##Adjusting for BMI (sometimes)
 Let's take a look at the effects of BMI on these associations. The phewas function allows one run sets of associations with an adjustment and one without, in addition to any standard covariates. No need to run the analysis again, but here's how one might do it.
 ```{r eval=FALSE}
-results=phewas(phenotypes=names(phenotypes)[-1], genotypes=c("rs8050136_A"), covariates=c("age", "is.male"), adjustments=list(NA,"bmi"), data=data, cores=4)
+results=phewas(phenotypes=names(phenotypes)[-1], genotypes=c("rs8050136_A"), covariates=list(c("age", "is.male"),c("age", "is.male","bmi")), data=data, cores=4)
 ```
 
 ##Phenotypes predicting phenotypes
