Rework the directory structure
Removing spaces as it was causing some headaches. Re-organized to make the v1.0 PheWAS the main example.

--- a/BMI_FTO_legacy/BMI FTO walkthrough.Rmd
+++ b/BMI_FTO_legacy/BMI FTO walkthrough.Rmd
@@ -12,8 +12,7 @@ This Rmd file will walk you through an example single SNP PheWAS. The data we wi
 We first need to install and load the PheWAS package:
 ```{r, eval=FALSE}
 install.packages("devtools")
-install.packages(c("dplyr","tidyr","ggplot2","MASS","meta","ggrepel","DT")) #May be necessary due to devtools issues
-devtools::install_github("PheWAS/PheWAS")
+devtools::install_github("PheWAS/PheWAS",ref="legacy")
 ```
 ```{r}
 library(PheWAS)
