--- a/BMI_FTO/BMI_FTO_walkthrough.Rmd
+++ b/BMI_FTO/BMI_FTO_walkthrough.Rmd
@@ -5,23 +5,26 @@ output: html_document
 ```{r setup, include=FALSE}
 #knitr::opts_knit$set( root.dir = "~/")
 ```
-##PheWAS R Package
+## PheWAS R Package
 This Rmd file will walk you through an example single SNP PheWAS. The data we will use today is simulated data, generated to reflect the real pattern of correlation found in the EHR. You have been provided one SNP, rs8050136, which is additively coded. There are three potential covariates included: age, is.male, and bmi. Remember that you can view documentation for the PheWAS package methods and other R functions using ?, e.g. ?phewas. In addition, the vignette contains a walkthrough and is available using vignette("PheWAS-package").
 
-##Install PheWAS
+## Install PheWAS
 We first need to install and load the v1.0 PheWAS package:
-```{r, eval=FALSE}
-if(!require(PheWAS)|packageVersion("PheWAS")<'0.99'){
+```{r, message=F}
+if(!require(PheWAS)|packageVersion("PheWAS")<'0.99.4'){
   if(!require(devtools)){
     install.packages("devtools")
   }
-  devtools::install_github("PheWAS/PheWAS", ref='v1.0')
+  devtools::install_github("PheWAS/PheWAS")
   library(PheWAS)
 }
-if(!require(readr)) {install.packages("readr")} #For faster file loading
+if(!require(readr)) {
+  install.packages("readr")
+  library("readr")
+} #For faster file loading
 ```
 
-##Load data
+## Load data
 There are a number of ways to load data, and we may have a variety of data sources for our analysis. First, we will load our genotype data from our plink raw file. It may be necessary to set or change your working directory (setwd). Alternatively, you can specify the complete path to the file you wish to load. Note that knitr requires us to use a special setup for the working directory above.
 ```{r}
 #setwd("~/")
@@ -40,12 +43,11 @@ Lastly, we will read our covariates in. These are saved in an RData file, which 
 load("covariates.RData")
 ```
 
-##Prepare Data
-Using the raw format data from plink means our genotype data will be ready to go. We are not going to transform our covariates either, so that leaves us to set up our phenotypes. The below call will use the default minimum code count of 2. This may take a few minutes to complete. Note that we are restricting some phenotypes that are specific to males or females, eg prostate cancer. We also define an aggregate function here, as we are using count data and not dates of occurrence (the preferred input).
+## Prepare Data
+Using the raw format data from plink means our genotype data will be ready to go. We are not going to transform our covariates either, so that leaves us to set up our phenotypes. The below call will use the default minimum code count of 2. This may take a few minutes to complete. Note that we are restricting some phenotypes that are specific to males or females, eg prostate cancer. We could also define an aggregate function here, as we are using count data and not dates of occurrence (the preferred input), but it will be handled by the default.
 ```{r}
 phenotypes=createPhenotypes(icd_codes, 
-                            id.sex = covariates %>% transmute(id, gender=ifelse(is.male,"M","F")),
-                            aggregate.fun = sum)
+                            id.sex = covariates %>% transmute(id, gender=ifelse(is.male,"M","F")))
 ```
 We can actually export this data to a phenotype file that would work with plink if interested. These can be quite large, so we are restricting to a single phenotype here
 ```{r}
@@ -56,13 +58,13 @@ We can pass in these separate data frames we have now loaded directly into the p
 data=inner_join(inner_join(covariates, genotypes),phenotypes)
 ```
 
-##Run PheWAS
+## Run PheWAS
 Running the PheWAS on a single SNP will not take very long, but we can speed it up using more cores. We will pass phewas the data frame we have merged already, so we need to tell it the names of the columns that contain the phenotypes, genotypes, and covariates. I get the names from the "phenotype" data frame and remove "FID", which is the first element. Note that you can adjust the number of cores as applicable to your system- be sure to play nicely if you are sharing a server!
 ```{r}
 results=phewas(phenotypes=names(phenotypes)[-1], genotypes=c("rs8050136_A"), covariates=c("age", "is.male"), data=data, cores=4)
 ```
 
-##View Our Results
+## View Our Results
 Checking out our results both as a table and figure can be helpful. There are many ways to order and view the results in R:
 ```{r}
 head(addPhecodeInfo(results) %>% arrange(p)) 
@@ -71,13 +73,13 @@ head(addPhecodeInfo(results) %>% arrange(p))
 Head gives the top n rows (6 by default), addPhecodeInfo adds the name of the phewas code to the data frame, and arrange orders the data frame according to p-value.
 We can report all associations from the PheWAS with p<1e-6 using the code below. There's also a handy method for creating an easy to use table in your knitted document! One can export the table with write.csv(), enabling it to be read by any spreadsheet software.
 ```{r}
-phewasDT(results %>% rename(phecode=phenotype))
+phewasDT(results)
 write.csv(addPhecodeInfo(results) %>% arrange(p) %>% filter(p<1e-6) %>% select(phenotype, description, snp, OR, p, n_total, n_cases, n_controls), file="top-results.csv")
 ```
 
 Note that our top results are three phecodes that look very similar. As you may remember, phecodes are hierarchical. We shouldn't be surprised to see the overlap in association here- the cases for each test are largely overlapped.
 
-##Plot the Results
+## Plot the Results
 Creating a rough visualization is straight forward.
 ```{r}
 phewasManhattan(results)
@@ -85,7 +87,7 @@ phewasManhattan(results)
 
 Try tweaking the plot using parameters, such as 'title'. You can view other options using ?phenotypePlot, ?phenotypeManhattan, and ?phewasManhattan (they all direct to the same place). Remember that most parameters from phenotypePlot can be used in the "higher level" plotting functions as well. 
 ```{r}
-my_plot=phewasManhattan(results, title="My example plot")
+my_plot=phewasManhattan(results, title="My example plot", OR.direction=TRUE)
 my_plot
 ```
 
@@ -98,20 +100,20 @@ dev.off()
 
 Note that changing the size and scale of the output plot can affect how it looks. The method ggsave from ggplot2 can be helpful for getting consistent output.
 
-##Adjusting for BMI (sometimes)
-Let's take a look at the effects of BMI on these associations. The phewas_ext function allows one run sets of associations with defined sets of covariates by providing a list of vectors instead of just one vector of covariates. No need to run the analysis again, but here's how one might do it.
-```{r eval=FALSE}
+## Adjusting for BMI (sometimes)
+Let's take a look at the effects of BMI on these associations. The phewas_ext function allows one run sets of associations with defined sets of covariates by providing a list of vectors instead of just one vector of covariates. Note that this will run the same analysis we did before, but now we will have a more complete result set.
+```{r}
 results=phewas_ext(phenotypes=names(phenotypes)[-1], genotypes=c("rs8050136_A"), covariates=list(c("age", "is.male"),c("age", "is.male","BMI")), data=data, cores=4)
 ```
 
-##Checking our BMI-adjusted results
+## Checking our BMI-adjusted results
 If we want to see what the results look like for a single group of covariates, we will need to filter our results.
-```{r eval=FALSE}
+```{r}
 results_bmi_adjusted = results %>% filter(covariates=='age,is.male,BMI')
 phewasManhattan(results_bmi_adjusted, title="Results adjusted for BMI",y.axis.interval=1)
 ```
 
-##Phenotypes predicting phenotypes
+## Phenotypes predicting phenotypes
 What happens if we predict phenotypes with our bmi variable?
 ```{r }
 results_bmi=phewas(phenotypes=names(phenotypes)[-1], predictors = c("BMI"), covariates=c("age", "is.male"), data=data, cores=4, additive.genotypes = F)
@@ -122,5 +124,5 @@ DT::datatable(results_bmi %>% addPhecodeInfo() %>% arrange(p) %>% filter(!is.na(
 ```
 
 
-##Conclusions
+## Conclusions
 Congratulations, you have successfully run a PheWAS using R (and perhaps knitted your first markdown file)!
